[tool.poetry]
name = "data_for_good"
version = "1.0.0"
description = ""
authors = ["Sal"]

[tool.poetry.dependencies]
python = "==3.8.10"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.4.0"
plotly = "^5.5.0"
dash = "^2.1.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
